--- a/muffin.html
+++ b/muffin.html
@@ -28,7 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="home.html">HOME</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
           <li class="nav-item"><a class="nav-link active" href="portfolio.html">PORTFOLIO</a></li>
-          <li class="nav-item"><a class="nav-link" href="home.html#contact">CONTACT</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -113,17 +113,17 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="assets/images/logo.png" alt="Logo">
+        <img src="assets/images/Logo.png" alt="Logo">
       </div>
       <nav class="footer-nav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="home.html#contact">Contact</a>
+        <a href="index.html#contact">Contact</a>
       </nav>
       <div class="socials">
         <a href="mailto:joannetan116@gmail.com"><img src="assets/images/socials/email_icon.png" alt="Email"></a>
-        <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/LinkedIn.png"
+        <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/linkedIn.png"
             alt="LinkedIn"></a>
         <a href="https://github.com/Joanne1106"><img src="assets/images/socials/github_icon.png" alt="GitHub"></a>
       </div>
