--- a/ar_namecard.html
+++ b/ar_namecard.html
@@ -117,17 +117,17 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="assets/images/logo.png" alt="Logo">
+        <img src="assets/images/Logo.png" alt="Logo">
       </div>
       <nav class="footer-nav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="home.html#contact">Contact</a>
       </nav>
       <div class="socials">
         <a href="mailto:joannetan116@gmail.com"><img src="assets/images/socials/email_icon.png" alt="Email"></a>
-        <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/LinkedIn.png"
+        <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/linkedin.png"
             alt="LinkedIn"></a>
         <a href="https://github.com/Joanne1106"><img src="assets/images/socials/github_icon.png" alt="GitHub"></a>
       </div>
