--- a/digital_banner.html
+++ b/digital_banner.html
@@ -27,7 +27,7 @@
         <li class="nav-item"><a class="nav-link" href="home.html">HOME</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
-        <li class="nav-item"><a class="nav-link" href="home.html#contact">CONTACT</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
