--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
         <li class="nav-item"><a class="nav-link active" href="about.html">ABOUT</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
         <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
