--- a/ar_namecard.html
+++ b/ar_namecard.html
@@ -25,7 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="home.html">HOME</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
           <li class="nav-item"><a class="nav-link active" href="portfolio.html">PORTFOLIO</a></li>
           <li class="nav-item"><a class="nav-link" href="home.html#contact">CONTACT</a></li>
