--- a/certificates.html
+++ b/certificates.html
@@ -24,7 +24,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
         <li class="nav-item"><a class="nav-link active" href="about.html">ABOUT</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
         <li class="nav-item"><a class="nav-link" href="home.html#contact">CONTACT</a></li>
@@ -215,7 +215,7 @@
     </nav>
     <div class="socials">
       <a href="mailto:joannetan116@gmail.com"><img src="assets/images/socials/email_icon.png" alt="Email"></a>
-      <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/linkedIn.png" alt="LinkedIn"></a>
+      <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/linkedin.png" alt="LinkedIn"></a>
       <a href="https://github.com/Joanne1106"><img src="assets/images/socials/github_icon.png" alt="GitHub"></a>
     </div>
     <p>© 2025 Joanne Tan</p>
