--- a/vr_escaperoom.html
+++ b/vr_escaperoom.html
@@ -24,7 +24,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
         <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
@@ -83,42 +83,6 @@
     </div>
 
 
-    <!-- Name Card Images -->
-    <div class="row justify-content-center g-4 mb-5">
-      <div class="col-md-4">
-        <div class="card shadow-lg border-0 rounded-4">
-          <img src="assets/images/projects/emojiquiz.png" alt="Screenshot 1"
-               class="img-fluid rounded-4">
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-lg border-0 rounded-4">
-          <img src="assets/images/projects/emojiquiz1.png" alt="Screenshot 2"
-               class="img-fluid rounded-4">
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-lg border-0 rounded-4">
-          <img src="assets/images/projects/emojiquiz2.png" alt="Screenshot 3"
-               class="img-fluid rounded-4">
-        </div>
-      </div>
-    </div>
-
-    <!-- Video Title -->
-    <h4 class="fw-bold mb-4 text-center">Live Demo</h4>
-
-    <!-- Video -->
-    <div class="row justify-content-center mb-5">
-      <div class="col-lg-12">
-        <div class="card shadow-lg border-0 rounded-4">
-          <video width="100%" controls class="rounded-4">
-            <source src="assets/videos/VR Escape room.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-
     <!-- Back Button -->
     <div class="d-flex justify-content-center mt-4">
       <a href="portfolio.html" class="btn view-all-btn back-portfolio-btn">
@@ -137,14 +101,14 @@
       <img src="assets/images/Logo.png" alt="Logo">
     </div>
     <nav class="footer-nav">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="index.html#contact">Contact</a>
     </nav>
     <div class="socials">
       <a href="mailto:joannetan116@gmail.com"><img src="assets/images/socials/email_icon.png" alt="Email"></a>
-      <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/linkedIn.png"
+      <a href="https://www.linkedin.com/in/joanne-tan-jieyin/"><img src="assets/images/socials/linkedin.png"
           alt="LinkedIn"></a>
       <a href="https://github.com/Joanne1106"><img src="assets/images/socials/github_icon.png" alt="GitHub"></a>
     </div>
