--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
           </div>
           <div class="mt-5">
-            <a href="portfolio.html" class="btn view-all-btn">View all projects</a>
+            <a href="portfolio.html" class="btn view-all-btn">View all works</a>
           </div>
         </div>
       </div>
