--- a/logo.html
+++ b/logo.html
@@ -78,7 +78,7 @@
     <!-- Back Button -->
     <div class="d-flex justify-content-center mt-4">
       <a href="portfolio.html" class="btn view-all-btn back-portfolio-btn">
-        ← Back to Other Portfolio
+        ← Back to other works
       </a>
     </div>
 
