--- a/about.html
+++ b/about.html
@@ -127,43 +127,50 @@
 </div>
 
 
+<section class="skills-section fade-up">
 <h1 class="heading fade-up">
   <span class="yellow-text">My Skills</span>
 </h1>
+
+<div class="skills-filter">
+  <button class="filter-btn active" data-category="all">All</button>
+  <button class="filter-btn" data-category="Front-end">Front-end Development</button>
+  <button class="filter-btn" data-category="Mobile-development">Mobile Development</button>
+  <button class="filter-btn" data-category="design">Design</button>
+</div>
+
 <section class="skills-section fade-up">
-  <div class="skill-card">
+  <div class="skill-card" data-category="Front-end">
     <h4>HTML</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="Front-end">
     <h4>CSS</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="Front-end">
     <h4>Javascript</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="Mobile-development">
     <h4>React Native</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="programming">
     <h4>React</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="design">
     <h4>Illustrator</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="design">
     <h4>Photoshop</h4>
   </div>
 
-  <div class="skill-card">
+  <div class="skill-card" data-category="design">
     <h4>Figma</h4>
   </div>
-
-
 </section>
 
 
