--- a/logo.html
+++ b/logo.html
@@ -70,7 +70,7 @@
 
       <!-- Right Column: Muffin Image -->
       <div class="col-md-5 d-flex align-items-center">
-        <img src="assets/images/projects/Logo_Design.png" alt="Logo Design" class="img-fluid rounded shadow">
+        <img src="assets/images/projects/LogoDesign.jpg" alt="Logo Design" class="img-fluid rounded shadow">
       </div>
 
     </div>
