--- a/about.html
+++ b/about.html
@@ -140,38 +140,16 @@
 </div>
 
 <section class="skills-section fade-up">
-  <div class="skill-card" data-category="Front-end">
-    <h4>HTML</h4>
-  </div>
-
-  <div class="skill-card" data-category="Front-end">
-    <h4>CSS</h4>
-  </div>
-
-  <div class="skill-card" data-category="Front-end">
-    <h4>Javascript</h4>
-  </div>
-
-  <div class="skill-card" data-category="Mobile-development">
-    <h4>React Native</h4>
-  </div>
-
-  <div class="skill-card" data-category="programming">
-    <h4>React</h4>
-  </div>
-
-  <div class="skill-card" data-category="design">
-    <h4>Illustrator</h4>
-  </div>
-
-  <div class="skill-card" data-category="design">
-    <h4>Photoshop</h4>
-  </div>
-
-  <div class="skill-card" data-category="design">
-    <h4>Figma</h4>
-  </div>
+  <div class="skill-card" data-category="Front-end"><h4>HTML</h4></div>
+  <div class="skill-card" data-category="Front-end"><h4>CSS</h4></div>
+  <div class="skill-card" data-category="Front-end"><h4>Javascript</h4></div>
+  <div class="skill-card" data-category="Mobile-development"><h4>React Native</h4></div>
+  <div class="skill-card" data-category="programming"><h4>React</h4></div>
+  <div class="skill-card" data-category="design"><h4>Illustrator</h4></div>
+  <div class="skill-card" data-category="design"><h4>Photoshop</h4></div>
+  <div class="skill-card" data-category="design"><h4>Figma</h4></div>
 </section>
+
 
 
 
