--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
               <h3 class="card-title">Awards</h3>
               <p class="card-text">Awarded for the most innovative and impactful project presentation in class.</p>
               <div class="mt-4">
-                <a href="certificates.html" class="btn view-all-btn">Read More</a>
+                <a href="award.html" class="btn view-all-btn">Read More</a>
               </div>
             </div>
           </div>
