--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </div>
 
             <div class="mt-5">
-            <a href="certificates.html" class="btn view-all-btn">View all awards</a>
+            <a href="award.html" class="btn view-all-btn">View all awards</a>
           </div>
 
           </div>
