--- a/about.html
+++ b/about.html
@@ -126,29 +126,29 @@
   </div>
 </div>
 
-
 <section class="skills-section fade-up">
-<h1 class="heading fade-up">
-  <span class="yellow-text">My Skills</span>
-</h1>
+  <h1 class="heading">
+    <span class="yellow-text">My Skills</span>
+  </h1>
 
-<div class="skills-filter">
-  <button class="filter-btn active" data-category="all">All</button>
-  <button class="filter-btn" data-category="Front-end">Front-end Development</button>
-  <button class="filter-btn" data-category="Mobile-development">Mobile Development</button>
-  <button class="filter-btn" data-category="design">Design</button>
-</div>
+  <div class="skills-filter">
+    <button class="skills-filter-btn" data-category="Front-end">Front-end Development</button>
+    <button class="skills-filter-btn" data-category="Mobile-development">Mobile Development</button>
+    <button class="skills-filter-btn" data-category="design">Design</button>
+  </div>
 
-<section class="skills-section fade-up">
-  <div class="skill-card" data-category="Front-end"><h4>HTML</h4></div>
-  <div class="skill-card" data-category="Front-end"><h4>CSS</h4></div>
-  <div class="skill-card" data-category="Front-end"><h4>Javascript</h4></div>
-  <div class="skill-card" data-category="Mobile-development"><h4>React Native</h4></div>
-  <div class="skill-card" data-category="programming"><h4>React</h4></div>
-  <div class="skill-card" data-category="design"><h4>Illustrator</h4></div>
-  <div class="skill-card" data-category="design"><h4>Photoshop</h4></div>
-  <div class="skill-card" data-category="design"><h4>Figma</h4></div>
+  <div class="skills-cards">
+    <div class="skill-card" data-category="Front-end"><h4>HTML</h4></div>
+    <div class="skill-card" data-category="Front-end"><h4>CSS</h4></div>
+    <div class="skill-card" data-category="Front-end"><h4>Javascript</h4></div>
+    <div class="skill-card" data-category="Mobile-development"><h4>React Native</h4></div>
+    <div class="skill-card" data-category="Front-end"><h4>React</h4></div>
+    <div class="skill-card" data-category="design"><h4>Illustrator</h4></div>
+    <div class="skill-card" data-category="design"><h4>Photoshop</h4></div>
+    <div class="skill-card" data-category="design"><h4>Figma</h4></div>
+  </div>
 </section>
+
 
 
 
@@ -194,7 +194,7 @@
             <img src="assets/images/icons/award.png" class="card-img-top rounded-top-4" alt="Award">
             <div class="card-body">
               <h3 class="card-title">Awards</h3>
-              <p class="card-text">Awarded for the most innovative and impactful project presentation in class.</p>
+              <p class="card-text">These awards remind me of the milestones I’ve reached and encourage me to keep growing and learning.</p>
               <div class="mt-4">
                 <a href="award.html" class="btn view-all-btn">Read More</a>
               </div>
@@ -211,7 +211,7 @@
               <p class="card-text">My volunteering experiences have provided valuable opportunities to develop interpersonal skills, collaborate
               effectively with diverse teams and contribute meaningfully to community projects.</p>
               <div class="mt-4">
-                <a href="certificates.html" class="btn view-all-btn">Read More</a>
+                <a href="volunteer.html" class="btn view-all-btn">Read More</a>
               </div>
             </div>
           </div>
@@ -220,12 +220,13 @@
         <!-- Slide 4 -->
         <div class="carousel-item">
           <div class="card achievements-card">
-            <img src="images/ny.jpg" class="card-img-top rounded-top-4" alt="Experience">
+            <img src="assets/images/icons/competition.png" class="card-img-top rounded-top-4" alt="Competition">
             <div class="card-body">
               <h3 class="card-title">Competition</h3>
-              <p class="card-text">Participated in immersive workshops to improve technical and creative skills.</p>
+              <p class="card-text">These competition give me a chance to step out of my comfort zone, tackle real challenges and and
+                grow through hands-on experience.</p>
               <div class="mt-4">
-                <a href="certificates.html" class="btn view-all-btn">Read More</a>
+                <a href="competition.html" class="btn view-all-btn">Read More</a>
               </div>
             </div>
           </div>
