--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="nav-item"><a class="nav-link active" href="#home">HOME</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
-        <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
@@ -191,6 +191,21 @@
             </div>
 
             <!-- Highlight Project 6 -->
+            <div class="col-md-4 portfolio-item" data-category="uiux">
+              <div class="card h-100 shadow-sm card-hover">
+                <img src="assets/images/projects/EcoVive-Collection.jpg" class="card-img" alt="Project 6">
+                <div class="uiux-card-overlay">
+                  <div class="overlay-content">
+                    <h3 class="card-title">EcoVive Collection</h3>
+                    <p>A sustainable fashion website designed to showcase eco-conscious apparel. The site emphasizes
+                      ethical production, environmental awareness, and modern, user-friendly design.</p>
+                    <div class="mt-3">
+                      <a href="ecoVive.html" class="btn btn-light btn-sm overlay-btn">View Project →</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
           <div class="mt-5">
@@ -269,6 +284,14 @@
               <div class="card h-100 shadow-sm card-hover"
                 onclick="showAward('The Ngee Ann Kongsi Study Award', 'assets/images/certificate/StudyAward.png')">
                 <img src="assets/images/certificate/StudyAward.png" class="card-img" alt="Award 1">
+              </div>
+            </div>
+
+            <!-- Award 2 -->
+            <div class="col-md-4">
+              <div class="card h-100 shadow-sm card-hover"
+                onclick="showAward('Edusave Merit Bursary', 'assets/images/certificate/Edusave Bursary.jpg')">
+                <img src="assets/images/certificate/Edusave Bursary.jpg" class="card-img" alt="Award 2">
               </div>
             </div>
 
