--- a/volunteer.html
+++ b/volunteer.html
@@ -34,57 +34,50 @@
 </nav>
 
 <h1 class="heading">
-    <span class="white-text">Awards</span>
+    <span class="white-text">Volunteer Experience</span>
 </h1>
 
-<div class="container portfolio-cards mt-5">
-  <div class="row g-4">
+<!-- Project Content -->
+<section class="py-5">
+  <div class="container fade-up" style="max-width: 1000px;">
 
-    <!-- Award 1 -->
-    <div class="col-md-4">
-        <div class="card h-100 shadow-sm card-hover"
-            onclick="showAward('The Ngee Ann Kongsi Study Award', 'assets/images/certificate/StudyAward.png')">
-            <img src="assets/images/certificate/StudyAward.png" class="card-img" alt="Award 1">
+    <!-- Main Row: Text Left + Image Right -->
+    <div class="row align-items-start g-5 mb-5">
+
+      <!-- Left Column: Text -->
+      <div class="col-md-7 d-flex flex-column justify-content-start">
+
+        <!-- Text Content -->
+        <div class="mb-4">
+          <h4 class="fw-bold mb-3">Service Learning Student Volunteer</h4>
+          <p>
+            In September and October 2025, I volunteered to help seniors learn how to use TikTok and YouTube. During this
+            experience, I guided them through creating accounts, navigating the platforms, and exploring content safely. It was
+            incredibly rewarding to see their confidence grow as they learned new digital skills, and I really enjoyed the
+            conversations and interactions that made the sessions both fun and meaningful. This experience also helped me develop
+            patience, communication skills, and the ability to explain technology in simple, easy-to-understand ways.
+          </p>
         </div>
-    </div>
 
-    <!-- Award 2 -->
-    <div class="col-md-4">
-        <div class="card h-100 shadow-sm card-hover"
-            onclick="showAward('Edusave Merit Bursary', 'assets/images/certificate/Edusave Bursary.jpg')">
-            <img src="assets/images/certificate/Edusave Bursary.jpg" class="card-img" alt="Award 2">
-        </div>
-    </div>
+      </div> 
 
-
-
-     <!-- Back to Portfolio Button -->
-    <div class="text-center mt-5">
-      <a href="about.html#achievements" class="btn view-all-btn">
-        ← Back to Other Achievements
-      </a>
-    </div>
+      <!-- Right Column: Image -->
+      <div class="col-md-5 d-flex align-items-center">
+        <img src="assets/images/Service Learning.jpg" alt="Service Learning" class="img-fluid rounded shadow">
+      </div>
+      
+      <!-- Back to Portfolio Button -->
+      <div class="text-center mt-5">
+        <a href="about.html#achievements" class="btn view-all-btn">
+          ← Back to Other Achievements
+        </a>
+      </div>
 
     </div>
   </div>
-</div>
+</section>
 
 
-<!-- Award Modal -->
-<div class="modal fade" id="awardModal" tabindex="-1" aria-labelledby="awardModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h5 class="modal-title" id="awardModalLabel">Award Title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body text-center">
-        <img id="awardImage" src="" alt="Award" class="img-fluid rounded shadow mb-3">
-        <p id="awardDescription"></p>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Footer -->
 <footer>
