--- a/certificates.html
+++ b/certificates.html
@@ -34,7 +34,7 @@
 </nav>
 
 <h1 class="heading">
-    <span class="yellow-text">Certificates</span>
+    <span class="white-text">Certificates</span>
 </h1>
 
 <div class="container portfolio-cards mt-5">
