--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <button class="filter-btn" data-filter="design">Graphic Design</button>
     <button class="filter-btn" data-filter="mobiledevelopment">Mobile App Development</button>
     <button class="filter-btn" data-filter="immersivetech">Immersive Technology</button>
-    <!-- <button class="filter-btn" data-filter="uiux">UI/UX design prototype</button> -->
+    <button class="filter-btn" data-filter="uiux">UI/UX design prototype</button>
   </div>
 
   <div class="container portfolio-cards fade-up">
@@ -144,6 +144,24 @@
         </div>
       </div>
 
+      <!-- Card 6 -->
+      <div class="col-md-4 portfolio-item" data-category="uiux">
+        <div class="card h-100 shadow-sm card-hover">
+          <img src="assets/images/projects/EcoVive-Collection.jpg" class="card-img" alt="Project 6">
+          <div class="uiux-card-overlay">
+            <div class="overlay-content">
+              <h3 class="card-title">EcoVive Collection</h3>
+              <p>A sustainable fashion e-commerce site selling men’s and women’s clothing and accessories, focusing on usability and a
+              clean, modern aesthetic.</p>
+              <div class="mt-3">
+                <a href="ecoVive.html" class="btn btn-light btn-sm overlay-btn">View Project →</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+     
     </div>
   </div>
 
