--- a/about.html
+++ b/about.html
@@ -47,15 +47,12 @@
     <!-- Right side: text -->
     <div class="col-md-7">
       <p class="about-text">
-        I am a year 2 student studying at Republic Polytechnic pursuing a
-        diploma in Digital Design and Development. I specialise in blending
-        clean design with functional code, using both creativity and logic to
-        bring ideas to life.
+        Exploring digital design and building interactive solutions fuel my passion for creating intuitive, visually engaging
+        experiences. I love experimenting, learning, and crafting designs that blend creativity with functionality.
       </p>
-      <p class="about-text">
-        Outside of school, I love exploring design trends, learning new coding tricks, 
-        and finding inspiration from everyday life. 
-      </p>
+      <p class="about-text">Driven by curiosity and a willingness to grow, I’m continuously expanding my skills in UI/UX design and software
+      development. I’m excited to take on projects that allow me to deliver work that is purposeful, well-executed, and
+      aligned with real user needs.</p>
     </div>
   </div>
 </div>
@@ -91,7 +88,7 @@
             </div>
             <div class="content">
               <h4>Higher Nitec in IT Application Development</h4>
-              <p>ITE College East — 2018–2022</p>
+              <p>ITE College East — 2022–2024</p>
               <p>Studying Higher Nitec in IT Application Development at ITE College East was where everything clicked for me. I didn't
               just learn how to code, I learned how much I enjoyed turning ideas into real, working applications. The projects,
               challenges and small wins during these two years shaped my foundation and sparked my passion to carry on.</p>
