--- a/certificates.html
+++ b/certificates.html
@@ -37,7 +37,7 @@
     <span class="white-text">Certificates</span>
 </h1>
 
-<div class="container portfolio-cards mt-5">
+<div class="container fade-up portfolio-cards mt-5">
   <div class="row g-4">
 
     <!-- Certificate 1 -->
@@ -168,8 +168,8 @@
     <!-- Certificate 15 -->
     <div class="col-md-4">
         <div class="card h-100 shadow-sm card-hover" data-bs-toggle="modal" data-bs-target="#certificateModal"
-            onclick="showCertificate('Certification of Participation', 'assets/images/certificate/Prompt Royale certificate.jpg')">
-            <img src="assets/images/certificate/Prompt Royale certificate.jpg"
+            onclick="showCertificate('Automation Anywhere Certificate', 'assets/images/certificate/Automation-Anywhere-Certificate.jpg')">
+            <img src="assets/images/certificate/Automation-Anywhere-Certificate.jpg"
                 class="card-img" alt="Certificate 15">
         </div>
     </div>
