--- a/competition.html
+++ b/competition.html
@@ -65,6 +65,7 @@
             specific tasks. This strengthened my ability to think critically, iterate quickly, and communicate instructions in a
             precise and structured manner.
           </p>
+          <p><a href="assets/images/certificate/Prompt Royale certificate.jpg">View Certificate</a></p>
         
         </div>
 
