--- a/award.html
+++ b/award.html
@@ -37,7 +37,7 @@
     <span class="white-text">Awards</span>
 </h1>
 
-<div class="container portfolio-cards mt-5">
+<div class="container fade-up portfolio-cards mt-5">
   <div class="row g-4">
 
     <!-- Award 1 -->
