--- a/about.html
+++ b/about.html
@@ -140,8 +140,8 @@
     <div class="skill-card" data-category="Front-end"><h4>Javascript</h4></div>
     <div class="skill-card" data-category="Mobile-development"><h4>React Native</h4></div>
     <div class="skill-card" data-category="Front-end"><h4>React</h4></div>
-    <div class="skill-card" data-category="design"><h4>Illustrator</h4></div>
-    <div class="skill-card" data-category="design"><h4>Photoshop</h4></div>
+    <div class="skill-card" data-category="design"><h4>Adobe Illustrator</h4></div>
+    <div class="skill-card" data-category="design"><h4>Adobe Photoshop</h4></div>
     <div class="skill-card" data-category="design"><h4>Figma</h4></div>
   </div>
 </section>
